# sealsharp

./: .gitignore  .gitmodules  ADDING_BINDINGS.md  README.md  prepare.sh  seal-c.sh  sealsharp.sln
seal-c/: CMakeLists.txt  ciphertext.cpp  ciphertext.hpp  coeff_modulus.cpp  coeff_modulus.hpp  context.cpp  decryptor.cpp  decryptor.hpp  encoder.cpp  encoder.hpp  encryption_parameters.cpp  encryption_parameters.hpp  encryptor.cpp  encryptor.hpp  evaluator.cpp  evaluator.hpp  key_generator.cpp  key_generator.hpp  memory_pool_handle.cpp  memory_pool_handle.hpp  plaintext.cpp  plaintext.hpp  public_key.cpp  public_key.hpp  relin_keys.cpp  relin_keys.hpp  secret_key.cpp  secret_key.hpp  shared_context.hpp  small_modulus.cpp  small_modulus.hpp  wrap.hpp
seal-c/include/seal-c/: c-decl.h  ciphertext.h  coeff_modulus.h  context.h  decryptor.h  encoder.h  encryption_parameters.h  encryptor.h  evaluator.h  key_generator.h  memory_pool_handle.h  plaintext.h  public_key.h  rein_keys.h  relin_keys.h  secret_key.h  small_modulus.h  types.h
sealsharp/: AssemblyInfo.cs  sealsharp.csproj
sealsharp-example/: Directory.Build.props  Main.cs  sealsharp-example.csproj
sealsharp/SEAL/: AbstractIntegerEncoder.cs  Ciphertext.cs  CoeffModulus.cs  Decryptor.cs  EncryptionParameters.cs  Encryptor.cs  Evaluator.cs  Expression.cs  IntegerEncoder.cs  KeyGenerator.cs  MemoryPoolHandle.cs  Plaintext.cs  PublicKey.cs  RelinKeys.cs  SEALContext.cs  SecretKey.cs  SmallModulus.cs
sealsharp/SEAL/Internal/: AbstractIntegerEncoder.cs  Ciphertext.cs  CoeffModulus.cs  Decryptor.cs  EncryptionParameters.cs  (+12 more)
